# pycold

./: .gitignore  .gitlab-ci.yml  .readthedocs.yml  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile_procedure  README.md  README.rst  build_wheels.sh  clean.sh  package-list.txt  pyproject.toml  run_developer_setup.sh  run_doctests.sh  run_linter.sh  run_tests.py  setup.py
.github/workflows/: tests.yml
dev/: README.rst  issue_develop.md  setup.py
dev/mwe/: README.rst  setup.py
dockerfiles/: README.rst  pycold.Dockerfile  pyenv.Dockerfile
docs/source/: conf.py  developer_install.rst  index.rst  modules.rst  pycold.app.rst  pycold.imagetool.export_change_map.rst  pycold.imagetool.grab_demo_landsat_data.rst  pycold.imagetool.prepare_ard.rst  pycold.imagetool.rst  pycold.imagetool.tile_processing.rst  pycold.monkey.rst  pycold.ob_analyst.rst  pycold.pyclassifier.rst  pycold.rst  pycold.utils.rst
requirements/: build.txt  gdal.txt  graphics.txt  headless.txt  optional.txt  runtime.txt  tests.txt
src/: .cold.c.swp  2d_array.c  CMakeLists.txt  KFAS.c  KFAS.h  Makefile  Makefile_hpc  cold.c  cold.h  const.h  defines.h  input.c  lbfgs.c  linear.c  misc.c  misc.h  multirobust.c  output.c  output.h  s_ccd.c  s_ccd.h  sccd-desktop.c  sccd-hpc.c  sccd-hpc_nompi.c  utilities.c  utilities.h  variables
src/cxx/: 2d_array.h  CMakeLists.txt  GLMnet.f  KFAS.c  KFAS.h  Makefile_exe  cold.c  cold.h  cold_norecoverybreak.c  cold_recoverydelete.c  config.yaml  defines (uspace's conflicted copy 2022-12-16).h  defines.h  distribution_math.c  distribution_math.h  input.c  input.h  lbfgs.h  linear_common.c  misc.c  misc.h  multilinear.c  output.c  output.h  s_ccd.c  s_ccd.c.autosave  s_ccd.h  sccd-desktop.c  sccd-hpc.c  utilities.c  utilities.h  variables_desktop
src/python/pycold/: CMakeLists.txt  __init__.py  _colds_cython.pyx  _param_validation.py  _pycold_cython.pyx  app.py  colds.py  common.py  console.py  constants.yaml  monkey.py  ob_analyst.py  ob_parameters.yaml  obcold.py  obcold_parameters.yaml  object_analyst.py  pyclassifier.py  utils.py
src/python/pycold/imagetool/: .prepare_kwcoco.py.swp  AutoPrepareDataARD.py  ExportChangeMap.py  PycoldProcessingTile.py  TileProcessing.py  config.yaml  export_change_map.py  export_cold_result_kwcoco.py  prepare_ard.py  prepare_kwcoco.py  sccd_run0_postprocessing.py  singlepath_landsat_conus.tif  tile_processing.py  tile_processing_kwcoco.py
test/: spectral_336_3980_obs.csv  spectral_336_3980_obs_StateRecords_B1.csv  spectral_336_3980_obs_StateRecords_B2.csv  spectral_336_3980_obs_StateRecords_B3.csv  spectral_336_3980_obs_StateRecords_B4.csv  spectral_336_3980_obs_StateRecords_B5.csv  spectral_336_3980_obs_StateRecords_B6.csv  spectral_336_3980_obs_StateRecords_B7.csv
tests/: shared.py  test_extract_features.py  test_import.py  test_ob_analyst.py  test_obcold.py  test_object_analyst.py  test_pyclassifier.py  test_pycold.py  test_sccd.py
tests/resources/: LCMAP_CU_2001_V01_LCPRI_027009_100_100.tif  record_change_pid15043028_cold.npy  record_change_x1_y1_cold.npy  record_change_x1_y2_cold.npy  record_change_x2_y1_cold.npy  record_change_x2_y2_cold.npy  spectral_15043028_ext.csv  spectral_15043028_sccdplot.pickle  spectral_336_3980_breaks.csv  spectral_336_3980_obs.csv  test_config.yaml  test_config_obanalyst.yaml  test_config_pyclassifier.yaml  test_parameters.yaml  tmp_feature_year2017_block1.npy
tests/resources/cm_maps/: CM_date_maps_730663_2000178.npy  CM_date_maps_730695_2000210.npy  CM_direction_maps_730663_2000178.npy  CM_direction_maps_730695_2000210.npy  CM_maps_730297_2000178.npy  CM_maps_730695_2000210.npy
tests/resources/feature_maps/: rf.model  tmp_feature_year2017_block2.npy  tmp_feature_year2017_block3.npy  tmp_feature_year2017_block4.npy  yearlyclassification_1999.npy
tool/matlab/: example_readingbinary.m
tool/notebook/: pycold_example.ipynb
tool/notebook/.ipynb_checkpoints/: pycold_example-checkpoint.ipynb
tool/python/: AutoPrepareDataARD.py  CMakeLists.txt  COLDexample_fromcsv.py  ExportChangeMap.py  Makefile  config.yaml  const.py  csvbased_example_COLD.py  exportChangeMap.py  generatechangemaps.py  parameter.py  parameters.yaml  pycold.pyx  pycold_workflow.py  pyscold_workflow.py  requirements.txt  setup.py
tool/python/.ipynb_checkpoints/: spcold_pixelplot-checkpoint.ipynb
tool/python/pycold/: CMakeLists.txt  __init__.py  _pycold_cython.pyx
